--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   <main>
     <section class="about">
       <section class="about__introduction">
-        <h1>
+        <h1 class="about__introduction-header">
           Save your data storage here.
         </h1>
-        <p>
+        <p class="about__introduction-text">
           Data Warehouse is a data storage area that has been tested for security, so you can store
           your data here safely but not be afraid of being stolen by
           others.
@@ -73,7 +73,7 @@
         </div>
       </section>
       <section class="about__description">
-        <h2>
+        <h2 class="about__description-header">
           We are a high-level data storage bank
         </h2>
         <p>
@@ -85,7 +85,7 @@
       </section>
     </section>
     <section class="features" id="features">
-      <h2>
+      <h2 class="features__header">
         Features
       </h2>
       <p class="features__description">
@@ -94,10 +94,10 @@
       </p>
       <div class="features__list">
         <section class="feature feature_green">
-          <h3>
+          <h3 class="feature__header">
             Search Data
           </h3>
-          <p>
+          <p class="feature__description">
             Don’t worry if your data is very large, the Data Warehouse provides a search engine,
             which is useful for making it easier to find data effectively saving time.
           </p>
@@ -108,10 +108,10 @@
           </div>
         </section>
         <section class="feature feature_purple">
-          <h3>
+          <h3 class="feature__header">
             24 Hours Access
           </h3>
-          <p>
+          <p class="feature__description">
             Access is given 24 hours a full morning to night and meet again in the morning, giving
             you comfort when you need data when urgent.
           </p>
@@ -122,10 +122,10 @@
           </div>
         </section>
         <section class="feature feature_pink">
-          <h3>
+          <h3 class="feature__header">
             Print Out
           </h3>
-          <p>
+          <p class="feature__description">
             Print out service gives you convenience if someday you need print data, just edit it
             all and just print it.
           </p>
@@ -136,10 +136,10 @@
           </div>
         </section>
         <section class="feature feature_blue">
-          <h3>
+          <h3 class="feature__header">
             Security Code
           </h3>
-          <p>
+          <p class="feature__description">
             Data Security is one of our best facilities. Allows for your files to be safer. The
             file can be secured with a code or password that you created, so only you can
             open the file.
